fixed issue with contact form appearing too high on the screen on higher screen values

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,8 @@ main {
 
 /*contact page*/
 /*contact page form styling*/
+
+
 #contact-intro {
     text-align: center;
     margin-top: 20px;
@@ -170,10 +172,8 @@ main {
     padding: 0 5px;
 }
 
-#query-text-area {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+#query {
+    resize:none;
 }
 
 #submit-button {
@@ -284,6 +284,7 @@ footer {
     #contact-page {
         display:flex;
         flex-direction:row;
+
     }
 
     #contact-section {
@@ -350,6 +351,12 @@ footer {
         padding:10px;
     }
 
+    #query {
+        resize: horizontal;
+        max-width: 50vw;
+    }
+          
+
 }
 
 /* Desktop and larger media query */
@@ -370,5 +377,13 @@ footer {
         max-width: 500px;
         max-height: 500px;
     }
+
+}
+
+@media screen and (min-height: 840px) {
+    
+    #contact-page {
+            margin-top:10vh;
+        }
 
 }
